--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ashokakawardha",
+  "home":"https://test.ashokakawardha.in",
   "version": "0.1.0",
   "private": true,
   "scripts": {
